getReimbursement completed in my ReimbDAO, working on insert functionality

--- a/FrontEnd/ERS.html
+++ b/FrontEnd/ERS.html
@@ -19,7 +19,7 @@
             <!-- default type is text -->
             <!-- <input type="text"> -->
             <input id="password" placeholder="Password" />
-            <button>Login</button>
+            <button id="loginButton">Login</button>
         </div>
 
         <br />
